--- a/src/root.scss
+++ b/src/root.scss
@@ -13,6 +13,7 @@
   --body-text: var(--gray-dark);
   --headline-text: var(--white);
 
+  --minimum-margin-spacing: 10px;
   --table-cell-height-spacing: 12px;
   --margin-spacing: 15px;
   --h2-header-font-size: 18px;
