--- a/src/signin.scss
+++ b/src/signin.scss
@@ -9,17 +9,18 @@
   }
 
   input {
-    margin-top: 10px;
-    height: var(--margin-height-spacing);
+    margin-top: var(--table-cell-height-spacing);
+    margin-bottom: var(--table-cell-height-spacing);
+    height: var(--table-cell-width-spacing);
     width: 100%;
   }
 
   button {
-    margin-top: var(--margin-height-spacing);
+    margin: var(--table-cell-height-spacing) 0px;
     background-color: var(--azure);
     color: var(--white);
     border: none;
-    padding: var(--button-height-spacing);
+    padding: 7px;
     width: 100%;
   }
 }
@@ -50,13 +51,6 @@
 
 .newpassword-page {
   text-align:center;
-  margin-top: var(--margin-height-spacing);
-}
-
-
-.form-group {
-  color: var(--gray-medium);
-  margin-bottom: var(--margin-height-spacing);
 }
 
 .form-group label {
